fix(styles): no horizontal scroll

--- a/elena-site/src/style.css
+++ b/elena-site/src/style.css
@@ -7,6 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
   font-size: 30px;
+  overflow-x: hidden;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
